--- a/examples/test.html
+++ b/examples/test.html
@@ -19,7 +19,7 @@
     <div id="addressdiv"><label for="address">Address</label><input type="text" name="address" class="text" id="address" maxlength="60"/></div>
     <div>
       <label for="howfound">How did you find us?</label>
-      <select id="howfound" name="howfound" class="select">
+      <select id="howfound" name="howfound" class="requiredselect">
         <option value="">[select an option]</option>
         <option value="google">Google</option>
         <option value="yellowpagesonline">Yellow Pages Online</option>
