--- a/trunk/examples/test.html
+++ b/trunk/examples/test.html
@@ -9,7 +9,7 @@
 
   <h1>GValidator Example</h1>
   <p>Fields marked with a <span class="required">*</span> are required.</p> 
-   <form action="/test.php" method="POST" id="autoform" class="autoform" >
+   <form action="" method="POST" id="autoform" class="autoform" >
     <div><label for="firstname">First Name</label><input type="text" name="firstname" class="firstname" id="firstname" maxlength="30"/></div>    
     <div><label for="lastname">Last Name</label><input type="text" name="lastname" class="lastname" id="lastname" maxlength="30"/></div>
 		<div><label for="subject">Subject</label><input type="text" name="subject" class="subject" id="subject" maxlength="30"/></div>
