--- a/trunk/examples/test.html
+++ b/trunk/examples/test.html
@@ -67,7 +67,7 @@
 	      <input type="checkbox" id="compressed" name="download" value="compressed" class="checkbox"/><label class="checkbox" for="compressed">Compressed</label>
 	    </fieldset>
     </div> 
-    <div id="submitdiv"><input id="submit" type="submit"/></div> 
+    <div id="submitdiv"><input id="submit" type="submit"/><input type="reset" /></div> 
   </form> 
   </body>
 </html>
