--- a/examples/test.html
+++ b/examples/test.html
@@ -11,13 +11,15 @@
   <h1>GValidator Example</h1>
   <p>Fields marked with a <span class="required">*</span> are required.</p> 
    <form action="" method="post" id="autoform" class="autoform" >
-    <div><label for="firstname">First Name</label><input type="text" name="firstname" class="required firstname" id="firstname" maxlength="30"/></div>    
+    <div><label for="firstname">First Name</label><input type="text" name="firstname" class="firstname required" id="firstname" maxlength="30"/></div>    
     <div><label for="lastname">Last Name</label><input type="text" name="lastname" class="lastname required" id="lastname" maxlength="30"/></div>
     <div><label for="lastnamenr">Last Name (Not Required)</label><input type="text" name="lastnamenr" class="lastname" id="lastnamenr" maxlength="30"/></div>
 		<div><label for="subject">Subject</label><input type="text" name="subject" class="subject required" id="subject" maxlength="30"/></div>
 		<div><label for="captcha">Captcha</label><input type="text" name="captcha" class="captcha required" id="captcha" maxlength="30"/></div>
     <div><label for="phone">Phone</label><input type="text" name="phone" class="phone required" id="phone" maxlength="12"/></div>
     <div><label for="email">Email</label><input type="text" name="email" class="email required" id="email" maxlength="60"/></div>
+    <div><label for="text">Text</label><input type="text" name="text" class="text required" id="text" maxlength="60"/></div>
+    <div><label for="mtext">More Text</label><input type="text" name="mtext" class="text" id="mtext" maxlength="60"/></div>
     <div id="addressdiv"><label for="address">Address</label><input type="text" name="address" class="text required" id="address" maxlength="60"/></div>
     <div>
       <label for="howfound">How did you find us?</label>
