--- a/trunk/examples/test_DE.html
+++ b/trunk/examples/test_DE.html
@@ -10,13 +10,14 @@
 </head>
 <body>
 
-  <h1>GValidator I8n Example</h1>
+  <h1>GValidator I8n Example: German</h1>
+  <p>Fields have been translated into German (probably poorly) using the params in gvalidator_DE.js.</p>
   <p>Fields marked with a <span class="required">*</span> are required.</p> 
    <form action="" method="post" id="autoform" class="autoform" lang="DE">
     <div><label for="firstname">First Name</label><input type="text" name="firstname" class="firstname required" id="firstname" maxlength="30"/></div>    
     <div><label for="lastname">Last Name</label><input type="text" name="lastname" class="lastname required" id="lastname" maxlength="30"/></div>
     <div><label for="lastnamenr">Last Name (Not Required)</label><input type="text" name="lastnamenr" class="lastname" id="lastnamenr" maxlength="30"/></div>
-		<div><label for="subject">Subject</label><input type="text" name="subject" class="subject required" id="subject" maxlength="30"/></div>
+		<div><label for="subject">Subject</label><input type="text" name="subject" class="text required" id="subject" maxlength="30"/></div>
 		<div><label for="captcha">Captcha</label><input type="text" name="captcha" class="captcha required" id="captcha" maxlength="30"/></div>
     <div><label for="phone">Phone</label><input type="text" name="phone" class="phone required" id="phone" maxlength="12"/></div>
     <div><label for="email">Email</label><input type="text" name="email" class="email required" id="email" maxlength="60"/></div>
