- Committing build package - Removed auto-load plugins/langs/config file function - Re-arranged build package

--- a/examples/test-custom-configuration.html
+++ b/examples/test-custom-configuration.html
@@ -2,10 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <title>GValidator Custom Configuration Example</title>
-  <script type="text/javascript" src="../js/gvalidator.js" defer="defer"></script>
-  <script type="text/javascript" src="../js/gvalidator-custom-configuration.js" defer="defer"></script>
-<!--  <script type="text/javascript" src="../js/gvalidator_EN.js" defer="defer"></script>  -->
+  <title>GValidator Custom Configuration Example</title>  
   <link rel="stylesheet" type="text/css" href="../css/gvalidator.css" media="screen"/>
 </head>
 <body>
@@ -16,7 +13,7 @@
   <div id="errors" class="hidden">
     <h3>Please correct the following errors</h3>
   </div> 
-   <form action="/" method="post" id="example-custom-form" class="autoform custom"  lang="EN">
+   <form action="/" method="post" id="example-custom-form" class="autoform custom">
     <div><label for="firstname">First Name</label><input tabindex="1" type="text" name="firstname" class="firstname required" id="firstname" maxlength="30"/></div>    
     <div><label for="lastname">Last Name</label><input tabindex="2" type="text" name="lastname" class="lastname required" id="lastname" maxlength="30"/></div>
     <div><label for="lastnamenr">Last Name (Not Required)</label><input tabindex="3" type="text" name="lastnamenr" class="lastname" id="lastnamenr" maxlength="30"/></div>
@@ -83,7 +80,7 @@
   <p>This form should use the generic configuration options, 
     and highlights how the configuration for different forms can be easily separated by using standard W3C attributes.</p>   
   
-  <form action="/" method="post" id="example-normal-form" class="autoform" lang="EN">
+  <form action="/" method="post" id="example-normal-form" class="autoform">
     <div><label for="firstname">First Name</label><input tabindex="23" type="text" name="firstname" class="firstname required" id="firstname2" maxlength="30"/></div>    
     <div><label for="lastname">Last Name</label><input tabindex="24" type="text" name="lastname" class="lastname required" id="lastname2" maxlength="30"/></div>
     <div><label for="lastnamenr">Last Name (Not Required)</label><input tabindex="25" type="text" name="lastnamenr" class="lastname" id="lastnamenr2" maxlength="30"/></div>
@@ -95,6 +92,7 @@
     <div><label for="mtext">More Text</label><input tabindex="31" type="text" name="mtext" class="text" id="mtext2" maxlength="60"/></div>
     <div><input id="submit2" tabindex="32" type="submit"/><input tabindex="33" type="reset" /></div>
   </form>
-  
+  <script type="text/javascript" src="../js/gvalidator.js" defer="defer"></script>
+  <script type="text/javascript" src="../js/gvalidator-config.js" defer="defer"></script>
   </body>
 </html>
