--- a/trunk/examples/test_DE.html
+++ b/trunk/examples/test_DE.html
@@ -3,9 +3,9 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title>GValidator Example</title>
-  <script type="text/javascript" src="../js/gvalidator.js" defer="defer"></script>
-  <script type="text/javascript" src="../js/gvalidator-plugins.js" defer="defer"></script>
-  <script type="text/javascript" src="../js/gvalidator_DE.js" defer="defer"></script>  
+  
+<!--  <script type="text/javascript" src="../js/gvalidator-plugins.js" defer="defer"></script>-->
+<!--  <script type="text/javascript" src="../js/gvalidator_DE.js" defer="defer"></script>  -->
   <link rel="stylesheet" type="text/css" href="../css/gvalidator.css" media="screen"/>
 </head>
 <body>
@@ -77,6 +77,9 @@
         <div><label for="ip4address">IP Address (v4)</label><input type="text" name="ip4address" class="ip4address" id="ip4address" maxlength="60"/></div>
     </div>
     <div id="submitdiv"><input id="submit" type="submit"/><input type="reset" /></div> 
-  </form> 
+  </form>
+  <script type="text/javascript" src="../js/gvalidator.js" defer="defer"></script>
+  <script type="text/javascript" src="../js/gvalidator-plugins.js" defer="defer"></script>
+  <script type="text/javascript" src="../js/gvalidator_DE.js" defer="defer"></script> 
   </body>
 </html>
