--- a/trunk/examples/test-plugin.html
+++ b/trunk/examples/test-plugin.html
@@ -74,7 +74,7 @@
     </div>
     <div id="submitdiv"><input id="submit" type="submit"/><input type="reset" /></div> 
   </form>
-  <script type="text/javascript" src="../js/gvalidator.js" defer="defer"></script>
-  <script type="text/javascript" src="../js/gvalidator-plugins.js" defer="defer"></script> 
+  <script type="text/javascript" src="../js/compressed/gvalidator.js" defer="defer"></script>
+  <script type="text/javascript" src="../js/compressed/examples/gvalidator-plugins.js" defer="defer"></script> 
   </body>
 </html>
