--- a/trunk/examples/test.html
+++ b/trunk/examples/test.html
@@ -70,6 +70,6 @@
     </div> 
     <div id="submitdiv"><input id="submit" type="submit"/><input type="reset" /></div> 
   </form>
-  <script type="text/javascript" src="../js/gvalidator.js" defer="defer"></script> 
+  <script type="text/javascript" src="../js/compressed/gvalidator.js" defer="defer"></script> 
   </body>
 </html>
