--- a/trunk/examples/test_DE.html
+++ b/trunk/examples/test_DE.html
@@ -78,8 +78,8 @@
     </div>
     <div id="submitdiv"><input id="submit" type="submit"/><input type="reset" /></div> 
   </form>
-  <script type="text/javascript" src="../js/gvalidator.js" defer="defer"></script>
-  <script type="text/javascript" src="../js/gvalidator-plugins.js" defer="defer"></script>
-  <script type="text/javascript" src="../js/gvalidator_DE.js" defer="defer"></script> 
+  <script type="text/javascript" src="../js/compressed/gvalidator.js" defer="defer"></script>
+  <script type="text/javascript" src="../js/compressed/examples/gvalidator-plugins.js" defer="defer"></script>
+  <script type="text/javascript" src="../js/compressed/examples/gvalidator_DE.js" defer="defer"></script> 
   </body>
 </html>
