- Latest JavaScript JavaDoc files - Refactored all of the DOMUtilities class into extensions of the Element prototype

--- a/examples/test-custom-configuration.html
+++ b/examples/test-custom-configuration.html
@@ -13,7 +13,7 @@
   <div id="errors" class="hidden">
     <h3>Please correct the following errors</h3>
   </div> 
-   <form action="/" method="post" id="example-custom-form" class="autoform custom">
+   <form action="/" method="post" id="example-custom-form" class="autoform custom" lang="EN">
     <div><label for="firstname">First Name</label><input tabindex="1" type="text" name="firstname" class="firstname required" id="firstname" maxlength="30"/></div>    
     <div><label for="lastname">Last Name</label><input tabindex="2" type="text" name="lastname" class="lastname required" id="lastname" maxlength="30"/></div>
     <div><label for="lastnamenr">Last Name (Not Required)</label><input tabindex="3" type="text" name="lastnamenr" class="lastname" id="lastnamenr" maxlength="30"/></div>
@@ -92,7 +92,8 @@
     <div><label for="mtext">More Text</label><input tabindex="31" type="text" name="mtext" class="text" id="mtext2" maxlength="60"/></div>
     <div><input id="submit2" tabindex="32" type="submit"/><input tabindex="33" type="reset" /></div>
   </form>
-  <script type="text/javascript" src="../js/gvalidator.js" defer="defer"></script>
-  <script type="text/javascript" src="../js/gvalidator-config.js" defer="defer"></script>
+  <script type="text/javascript" src="../js/compressed/gvalidator.js" defer="defer"></script>
+  <script type="text/javascript" src="../js/compressed/examples/gvalidator_EN.js" defer="defer"></script>
+  <script type="text/javascript" src="../js/compressed/examples/gvalidator-config.js" defer="defer"></script>
   </body>
 </html>
