Better validation for textareas

--- a/examples/test.html
+++ b/examples/test.html
@@ -20,6 +20,7 @@
     <div><label for="text">Text</label><input type="text" name="text" class="text required" id="text" maxlength="60"/></div>
     <div><label for="mtext">More Text</label><input type="text" name="mtext" class="text" id="mtext" maxlength="60"/></div>
     <div id="addressdiv"><label for="address">Address</label><input type="text" name="address" class="text required" id="address" maxlength="60"/></div>
+    <div><label for="lifestory">Tell us your life story</label><textarea name="lifestory" class="text required" id="lifestory" rows="10" cols="20"></textarea></div>
     <div>
       <label for="howfound">How did you find us?</label>
       <select id="howfound" name="howfound" class="select required">
