--- a/examples/test_DE.html
+++ b/examples/test_DE.html
@@ -14,52 +14,52 @@
   <p>Fields have been translated into German (probably poorly) using the params in gvalidator_DE.js.</p>
   <p>Fields marked with a <span class="required">*</span> are required.</p> 
    <form action="" method="post" id="autoform" class="autoform" lang="DE">
-    <div><label for="firstname">First Name</label><input type="text" name="firstname" class="firstname required" id="firstname" maxlength="30"/></div>    
-    <div><label for="lastname">Last Name</label><input type="text" name="lastname" class="lastname required" id="lastname" maxlength="30"/></div>
-    <div><label for="lastnamenr">Last Name (Not Required)</label><input type="text" name="lastnamenr" class="lastname" id="lastnamenr" maxlength="30"/></div>
-		<div><label for="subject">Subject</label><input type="text" name="subject" class="text required" id="subject" maxlength="30"/></div>
+    <div><label for="firstname">Vorname</label><input type="text" name="firstname" class="firstname required" id="firstname" maxlength="30"/></div>    
+    <div><label for="lastname">Nachname</label><input type="text" name="lastname" class="lastname required" id="lastname" maxlength="30"/></div>
+    <div><label for="lastnamenr">Vorname (nicht erforderlich)</label><input type="text" name="lastnamenr" class="lastname" id="lastnamenr" maxlength="30"/></div>
+		<div><label for="subject">Subjekt</label><input type="text" name="subject" class="text required" id="subject" maxlength="30"/></div>
 		<div><label for="captcha">Captcha</label><input type="text" name="captcha" class="captcha required" id="captcha" maxlength="30"/></div>
-    <div><label for="phone">Phone</label><input type="text" name="phone" class="phone required" id="phone" maxlength="12"/></div>
-    <div><label for="email">Email</label><input type="text" name="email" class="email required" id="email" maxlength="60"/></div>
+    <div><label for="phone">Telefon</label><input type="text" name="phone" class="phone required" id="phone" maxlength="12"/></div>
+    <div><label for="email">E-mail</label><input type="text" name="email" class="email required" id="email" maxlength="60"/></div>
     <div><label for="text">Text</label><input type="text" name="text" class="text required" id="text" maxlength="60"/></div>
-    <div><label for="mtext">More Text</label><input type="text" name="mtext" class="text" id="mtext" maxlength="60"/></div>
-    <div id="addressdiv"><label for="address">Address</label><input type="text" name="address" class="text required" id="address" maxlength="60"/></div>
+    <div><label for="mtext">Mehr Text</label><input type="text" name="mtext" class="text" id="mtext" maxlength="60"/></div>
+    <div id="addressdiv"><label for="address">Adresse</label><input type="text" name="address" class="text required" id="address" maxlength="60"/></div>
     <div>
-      <label for="howfound">How did you find us?</label>
+      <label for="howfound">Wie haben Sie uns gefunden?</label>
       <select id="howfound" name="howfound" class="select required">
-        <option value="">[select an option]</option>
+        <option value="">[wählen Sie eine Option]</option>
         <option value="google">Google</option>
         <option value="yellowpagesonline">Yellow Pages Online</option>
         <option value="yellowpages">Yellow Pages</option>
         <option value="othersearchengine">Other search engine</option>
-        <option value="Other">Other</option>
+        <option value="Other">Andere</option>
       </select>
     </div>  
     <div>
-      <label for="howfound">No need to answer</label>
+      <label for="howfound">keine Notwendigkeit zu beantworten</label>
       <select id="notrequiredselect" name="notrequiredselect" class="select">
-        <option value="">[select an option]</option>
+        <option value="">[wählen Sie eine Option]</option>
         <option value="google">Test 1</option>
         <option value="yellowpagesonline">Test 2</option>
       </select>
     </div>     
     <div id="radiodiv">
 	    <fieldset>
-	      <legend>Sex</legend>
-        <input type="radio" id="male" name="sex" value="male" class="radio required"/><label class="radio" for="male">Male</label>
-        <input type="radio" id="female" name="sex" value="female" class="radio required"/><label class="radio" for="female">Female</label>
+	      <legend>Geschlecht</legend>
+        <input type="radio" id="male" name="sex" value="male" class="radio required"/><label class="radio" for="male">Männlich</label>
+        <input type="radio" id="female" name="sex" value="female" class="radio required"/><label class="radio" for="female">Weiblich</label>
       </fieldset>
     </div> 
     <div id="radiodiv2">
 			<fieldset>
-				<legend>Age bracket</legend>
+				<legend>Altersklasse</legend>
 	      <input type="radio" id="age1" name="age" value="20" class="radio"/><label class="radio required" for="age1">&lt; 100</label>
     	  <input type="radio" id="age2" name="age" value="50" class="radio"/><label class="radio required" for="age2">100+</label>
     	</fieldset>
     </div> 
     <div id="checkboxdiv">
       <fieldset>
-        <legend>Select Subscriptions</legend>
+        <legend>Abonnement wählen</legend>
         <input type="checkbox" id="css" name="news" value="css" class="checkbox required"/><label class="checkbox" for="css">CSS</label>
         <input type="checkbox" id="javascript" name="news" value="javascript" class="checkbox required"/><label class="checkbox" for="javascript">JavaScript</label>
         <input type="checkbox" id="usability" name="news" value="usability" class="checkbox required"/><label class="checkbox" for="usability">Usability</label>
@@ -67,14 +67,14 @@
     </div>
     <div id="checkboxdiv2">
 	    <fieldset>
-	      <legend>Source code</legend>
-	      <input type="checkbox" id="source" name="download" value="source" class="checkbox"/><label class="checkbox" for="source">Source</label>
-	      <input type="checkbox" id="compressed" name="download" value="compressed" class="checkbox"/><label class="checkbox" for="compressed">Compressed</label>
+	      <legend>Source-Code</legend>
+	      <input type="checkbox" id="source" name="download" value="source" class="checkbox"/><label class="checkbox" for="source">Quelle</label>
+	      <input type="checkbox" id="compressed" name="download" value="compressed" class="checkbox"/><label class="checkbox" for="compressed">komprimierte</label>
 	    </fieldset>
     </div> 
     <div id="pluginsdiv">
       <div><h3>Plug-ins Tests</h3></div>
-        <div><label for="ip4address">IP Address (v4)</label><input type="text" name="ip4address" class="ip4address" id="ip4address" maxlength="60"/></div>
+        <div><label for="ip4address">IP-Adresse (v4)</label><input type="text" name="ip4address" class="ip4address" id="ip4address" maxlength="60"/></div>
     </div>
     <div id="submitdiv"><input id="submit" type="submit"/><input type="reset" /></div> 
   </form>
