Made ip4address a required field

--- a/examples/test-plugin.html
+++ b/examples/test-plugin.html
@@ -70,7 +70,7 @@
     </div> 
     <div id="pluginsdiv">
       <div><h3>Plug-ins Tests</h3></div>
-        <div><label for="ip4address">IP Address (v4)</label><input type="text" name="ip4address" class="ip4address" id="ip4address" maxlength="60"/></div>
+        <div><label for="ip4address">IP Address (v4)</label><input type="text" name="ip4address" class="ip4address required" id="ip4address" maxlength="60"/></div>
     </div>
     <div id="submitdiv"><input id="submit" type="submit"/><input type="reset" /></div> 
   </form>
